--- a/docroot/sites/all/themes/drupalcampcebu2014/public/sass/partials/_venue.scss
+++ b/docroot/sites/all/themes/drupalcampcebu2014/public/sass/partials/_venue.scss
@@ -15,7 +15,7 @@
     -moz-transform: rotate(180deg);
     -ms-transform: rotate(180deg);
     -o-transform: rotate(180deg);
-    z-index: 9999;
+    z-index: 1;
     position: relative;
   }
   margin-bottom: -45px;
